--- a/references.bib
+++ b/references.bib
@@ -207,3 +207,20 @@ keywords = {Quantified Boolean formula, strongly connected components, 2-CNF, 2-
   biburl    = {https://dblp.org/rec/series/faia/2009-185.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/pieee/VizelWM15,
+  author    = {Yakir Vizel and
+               Georg Weissenbacher and
+               Sharad Malik},
+  title     = {Boolean Satisfiability Solvers and Their Applications in Model Checking},
+  journal   = {Proc. {IEEE}},
+  volume    = {103},
+  number    = {11},
+  pages     = {2021--2035},
+  year      = {2015},
+  url       = {https://doi.org/10.1109/JPROC.2015.2455034},
+  doi       = {10.1109/JPROC.2015.2455034},
+  timestamp = {Fri, 02 Oct 2020 14:42:28 +0200},
+  biburl    = {https://dblp.org/rec/journals/pieee/VizelWM15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
